@@ -113,6 +113,8 @@ class FGPasswordField(FGStringField):
 
     # 'hidden' isn't really useful for this field.
     del schema['hidden']
+    # 'serverSide' is not really useful for this field.
+    del schema['serverSide']
 
     # hide references & discussion
     finalizeFieldSchema(schema, folderish=True, moveDiscussion=False)
@@ -189,6 +191,8 @@ class FGIntegerField(BaseFormField):
 
     # 'hidden' isn't really useful for this field.
     del schema['hidden']
+    # 'serverSide' is not really useful for this field.
+    del schema['serverSide']
 
     # hide references & discussion
     finalizeFieldSchema(schema, folderish=True, moveDiscussion=False)
@@ -259,6 +263,8 @@ class FGFixedPointField(BaseFormField):
 
     # 'hidden' isn't really useful for this field.
     del schema['hidden']
+    # 'serverSide' is not really useful for this field.
+    del schema['serverSide']
 
     # and, required has only limited use ...
     schema['required'].widget.description = \
@@ -365,6 +371,8 @@ class FGBooleanField(BaseFormField):
 
     # 'hidden' isn't really useful for this field.
     del schema['hidden']
+    # 'serverSide' is not really useful for this field.
+    del schema['serverSide']
 
     # hide references & discussion
     finalizeFieldSchema(schema, folderish=True, moveDiscussion=False)
@@ -492,6 +500,8 @@ class FGDateField(BaseFormField):
 
     # 'hidden' isn't really useful for this field.
     del schema['hidden']
+    # 'serverSide' is not really useful for this field.
+    del schema['serverSide']
 
     # hide references & discussion
     finalizeFieldSchema(schema, folderish=True, moveDiscussion=False)
@@ -723,6 +733,8 @@ class FGSelectionField(BaseFormField):
     # 'hidden' isn't really useful for a selection field.
     # Just use a hidden string field if you really need this.
     del schema['hidden']
+    # 'serverSide' is not really useful for this field.
+    del schema['serverSide']
 
     # hide references & discussion
     finalizeFieldSchema(schema, folderish=True, moveDiscussion=False)
@@ -820,6 +832,8 @@ class FGMultiSelectField(BaseFormField):
     # current Archetypes doesn't really support hidden for
     # multi-select. Use a lines field if you really need this
     del schema['hidden']
+    # 'serverSide' is not really useful for this field.
+    del schema['serverSide']
 
     # hide references & discussion
     finalizeFieldSchema(schema, folderish=True, moveDiscussion=False)
@@ -1014,6 +1028,8 @@ class FGRichTextField(BaseFormField):
     # 'hidden' isn't really useful for an RT field.
     # Just use a hidden string field if you really need this.
     del schema['hidden']
+    # 'serverSide' is not really useful for this field.
+    del schema['serverSide']
 
     if HAS_MX_TIDY:
         schema = schema + Schema((
@@ -1213,6 +1229,8 @@ class FGFileField(BaseFormField):
 
     # 'hidden' isn't really useful for a file field.
     del schema['hidden']
+    # 'serverSide' is not really useful for this field.
+    del schema['serverSide']
 
     finalizeFieldSchema(schema, folderish=True, moveDiscussion=False)
 
