@@ -474,7 +474,7 @@ class FormFolder(ATFolder):
                 raise Redirect, secure_url
 
     security.declareProtected(View, 'fgFields')
-    def fgFields(self, request=None, displayOnly=False):
+    def fgFields(self, request=None, displayOnly=False, excludeServerSide=True):
         """ generate fields on the fly; also primes request with
             defaults if request is passed.
             if displayOnly, label fields are excluded.
@@ -500,7 +500,7 @@ class FormFolder(ATFolder):
                     # prime the request
                     obj.fgPrimeDefaults(request)
                 #if not (displayOnly and (obj.isLabel() or obj.isFileField()) ):
-                if not (displayOnly and obj.isLabel()):
+                if not (displayOnly and obj.isLabel()) and not (excludeServerSide and obj.getServerSide()):
                     myFields.append(obj.fgField)
 
         return myFields
@@ -531,6 +531,8 @@ class FormFolder(ATFolder):
         for obj in fields:
             field = obj.fgField
 
+            if obj.getServerSide(): 
+                REQUEST.form[obj.getId()] = obj.getFgDefault()
             result = field.widget.process_form(self, field, REQUEST.form, empty_marker=_marker)
 
             if result is None or result is _marker:
@@ -699,6 +701,7 @@ class FormFolder(ATFolder):
             myFields.append( (noneValue, _(u'vocabulary_none_text', u'None')) )
 
         for obj in self._getFieldObjects(objTypes):
+            if obj.getServerSide(): continue
             if isinstance(obj.title, unicode):
                 myFields.append( (obj.getId(), obj.title) )
             else:
