@@ -3,11 +3,11 @@ import doctest
 
 from Testing import ZopeTestCase as ztc
 from Products.PloneFormGen.tests.pfgtc import PloneFormGenFunctionalTestCase
-from Products.PloneFormGen import HAS_PLONE30
 
 testfiles = (
     'browser.txt',
     'ssl.txt',
+    'serverside_field.txt',
     '../dollarReplace.py',
 )
 
@@ -18,7 +18,7 @@ def test_suite():
             f, package='Products.PloneFormGen.tests',
             test_class=PloneFormGenFunctionalTestCase,
             optionflags=doctest.REPORT_ONLY_FIRST_FAILURE | doctest.NORMALIZE_WHITESPACE | doctest.ELLIPSIS)
-
+        
             for f in testfiles
         ])
 
